--- a/docs/notebooks/Multipole_Moments.ipynb
+++ b/docs/notebooks/Multipole_Moments.ipynb
@@ -19,7 +19,12 @@
     "$$\n",
     "for some function $f : \\mathbb{R}^3\\rightarrow \\mathbb{R}$, where $S_l^m$ is the regular, real solid harmonics, $(n_x, n_y, n_z)$ are the Cartesian orders over some center $(X_c, Y_c, Z_c)$ and $(l, m)$ are the angular order and degree.\n",
     "\n",
-    "The moment function in grid can compute all multipole moments leading up to a specified order. In addition, it can take various centers to compute over."
+    "The moment function in grid can compute all multipole moments leading up to a specified order. In addition, it can take various centers to compute over.\n",
+    "\n",
+    "\n",
+    "Suppose we have a electron density of a molecular $\\rho(\\textbf{r}})$.  The electric dipole moment $\\textbf{p}$ is defined to be a vector corresponding to Cartesian moment whose orders $(n_x, n_y, n_z)$ sum  up to one, i.e. $\\textbf{p} = (m_{1, 0, 0}, m_{0, 1, 0}, m_{0, 0, 1})$.  The magnitude of this is the dipole moment $\\mu$ of the electron density\n",
+    "\n",
+    "$$\\mu = \\big| \\big|\\textbf{p} \\big| \\big| = \\sqrt{m_{1, 0, 0}^2 +  m_{0, 1, 0}^2 + m_{0, 0, 1}^2}.$$"
    ]
   },
   {
