--- a/docs/_sources/notebooks/Interpolation_and_Poisson.ipynb
+++ b/docs/_sources/notebooks/Interpolation_and_Poisson.ipynb
@@ -121,7 +121,7 @@
     "#### Solving Poisson Equation\n",
     "\n",
     "The Poisson equation is defined as $\\nabla^2 V = - 4\\pi f(\\vec{\\textbf{r}})$, where $V$ is the unknown potential, $\\nabla^2$ is the Laplacian and $f$ is the charge distribution.\n",
-    "It is well-known that the solution to this is given by $V(\\vec{\\textbf{r}}) = \\int \\frac{f(\\vec{\\textbf{r}}^\\prime)}{|\\vec{\\textbf{r}} - \\vec{\\textbf{r}}^\\prime| } d\\vec{\\textbf{r}}^\\prime$.  For the unit-charge distribution given above, the solution is given by $V(r, \\theta, \\phi) = ERF \\bigg[ \\frac{\\sqrt{\\alpha} r_A}{r_A} \\bigg],$ where ERF is the error function. Grid offers two methods of solving the Poisson equation over an atomic grid.  The recommended method is the `solve_poisson_bvp` and is used in this example."
+    "It is well-known that the solution to this is given by $V(\\vec{\\textbf{r}}) = \\int \\frac{f(\\vec{\\textbf{r}}^\\prime)}{|\\vec{\\textbf{r}} - \\vec{\\textbf{r}}^\\prime| } d\\vec{\\textbf{r}}^\\prime$.  For the unit-charge distribution given above, the solution is given by $V(r, \\theta, \\phi) = \\text{erf} \\bigg[ \\frac{\\sqrt{\\alpha} r_A}{r_A} \\bigg],$ where ERF is the error function. Grid offers two methods of solving the Poisson equation over an atomic grid.  The recommended method is the `solve_poisson_bvp` and is used in this example."
    ],
    "metadata": {
     "collapsed": false
