Update sphinx docs

--- a/doc/notebooks/Molecular_Grid.ipynb
+++ b/doc/notebooks/Molecular_Grid.ipynb
@@ -207,7 +207,7 @@
     "\n",
     "##### Example: Electron Density\n",
     "\n",
-    "This example shows how to interpolate is performed using molecular grids.  The electron density is used again here as the example."
+    "This example shows how to interpolate any function using molecular grids.  The electron density is used again here as the example."
    ],
    "metadata": {
     "collapsed": false
