--- a/doc/notebooks/Molecular_Integration.ipynb
+++ b/doc/notebooks/Molecular_Integration.ipynb
@@ -3,8 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Molecular Integration\n",
+    "# Constructing Molecular Grids\n",
     "\n",
+    "### Molecular Grid Details\n",
     "Molecular grids are particularly useful in quantum chemistry for integrating functions that concentrate and are \"spike\" around finite set of points, usually the atomic nuclei. This is particularly needed for DFT computation or atom-in-molecule analysis. It starts by first decomposing a function into atomic contributions and\n",
     "writing out each atomic integral in spherical coordinates. As proposed by [Becke](../index.rst#becke1988_multicenter), this is done as\n",
     "\n",
@@ -30,6 +31,8 @@
     "\n",
     "For any general function $f: \\mathbb{R}^3\\rightarrow \\mathbb{R}$, Grid package offers various grids in [Cubic](../pyapi/grid.cubic.rst) class for constructing hyper-rectangular grids. If $f$ is periodic, then the [periodic](../pyapi/grid.periodicgrid.rst) module is useful.\n",
     "\n",
+    "\n",
+    "**Example: Formaldehyde**\n",
     "This example computes the integral of the electron density of Formaldehyde obtained from Gaussian calculation. The integral of the electron density should be the sum of the atomic charges (16 for Formaldehyde)."
    ],
    "metadata": {
@@ -72,14 +75,14 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Construction of Molecular Grid\n",
+    "### Construction of Molecular Grid\n",
     "\n",
     "Molecular grid offers various methods to construct MolGrid object.  Each method requires the atom in molecule weights $w_A$ to be provided.\n",
     "\n",
     "1. [MolGrid.\\_\\_init\\_\\_](../pyapi/grid.molgrid.rst#grid.molgrid.MolGrid): Provide list of atomic grids for each center, and the atomic numbers for each center. This is useful to explicitly place atomic grids at each center.\n",
     "2. [MolGrid.from_preset()](../pyapi/grid.molgrid.rst#grid.molgrid.MolGrid.from_preset): Generates atomic grid for each center based on the atomic numbers, atomic coordinates, a radial grid to integrate over $[0, \\infty)$, and a preset parameter from the list [\"coarse\", \"medium\", \"fine\", \"veryfine\", \"ultrafine\", \"insane\"] that controls the degree of the angular grid.\n",
     "3. [MolGrid.from_size()](../pyapi/grid.molgrid.rst#grid.molgrid.MolGrid.from_size): Similar to from_preset method but instead of string preset parameter, it has an integer size which controls the size of the angular grid inside the atomic grid class.\n",
-    "4. [MolGrid.from_prune()](../pyapi/grid.molgrid.rst#grid.molgrid.MolGrid.from_prune): Gives more control to the size of the angular grid based on the radius.  This is done by providing `r_sectors` list and `sector_degs` that controls what kind of angular grid to place at each radius point. This is useful for placing lower degree angular grids close to the nucleus and larger degree angular grids further away.\n",
+    "4. [MolGrid.from_pruned()](../pyapi/grid.molgrid.rst#grid.molgrid.MolGrid.from_pruned): Gives more control to the size of the angular grid based on the radius.  This is done by providing `r_sectors` list and `sector_degs` that controls what kind of angular grid to place at each radius point. This is useful for placing lower degree angular grids close to the nucleus and larger degree angular grids further away.\n",
     "\n",
     "See the function documentation for more information.  The first step here is to generate an one-dimensional grid to integrate over the radial coordinate $r \\in [0, \\infty)$.  This is done by constructing a Trapezoidal grid over $[-1, 1]$ and using the Becke Transformation to transform it to $[0, \\infty)$.\n"
    ],
@@ -131,7 +134,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### Initailizor Method\n",
+    "#### Constructor\n",
     "The first method of constructing (point 1 above) is using the initializor.  This is done by explicitly constructing an atomic grid over each center.\n",
     "The degree of the angular component of the atomic grid should depend on the charge of the atom.  It is recommended that the larger the atom, the larger\n",
     "the degree of the angular component. Similarly for the radial grid, the larger the atom, the larger the radial grid component should be.\n"
@@ -175,7 +178,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### from_preset method\n",
+    "#### from_preset method\n",
     "\n",
     "The disadvantage of the previous method is that it is difficult to choose the size of the angular degrees for each atom, and it can be cumbersome for larger atoms to construct atomic grids for each center.\n",
     "The `from_preset` method has a preset that handles it for the user that is simpler.\n"
@@ -212,9 +215,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### from_size method\n",
+    "#### from_size method\n",
     "\n",
-    "This method is similar to before except you can explicitly set the size of the angular degrees.  The disadvantage is that it sets the same size for all atoms."
+    "This method is similar to before except you can explicitly set the size of the angular degrees.  This is the same across all atoms."
    ],
    "metadata": {
     "collapsed": false
@@ -248,7 +251,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "##### from_pruned method\n",
+    "#### from_pruned method\n",
     "\n",
     "This method allows explicit control to the angular degree $L_i$ by breaking up the radial grid $[0, \\infty)$ into sectors $[0, R a_1) \\cup [R a_1, R a_2) \\cup \\cdots \\cup [R a_Q, \\infty)$ where $R$ is the radius parameter, $\\{a_i\\}$ is the `r_sectors` and each segment is associated to a angular degree $L_i$, i.e.\n",
     "\n",
