--- a/doc/notebooks/Molecular_Grid.ipynb
+++ b/doc/notebooks/Molecular_Grid.ipynb
@@ -7,8 +7,8 @@
     "\n",
     "This example on Formaldehyde illustates all the features of using molecular grids.\n",
     "\n",
-    "The format checkpoint file wavefunction is included in \"./doc/notebooks/ch2o_q+0.fchk\" and is\n",
-    "read using [IOData](https://github.com/theochem/iodata) package."
+    "The format checkpoint file wavefunction is included in \"doc/notebooks/ch2o_q+0.fchk\" and is\n",
+    "read using the [IOData](https://github.com/theochem/iodata) package."
    ],
    "metadata": {
     "collapsed": false
@@ -20,8 +20,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:22:55.129812618Z",
-     "start_time": "2023-05-17T14:22:54.596001113Z"
+     "end_time": "2023-05-18T16:47:59.203357490Z",
+     "start_time": "2023-05-18T16:47:58.867656425Z"
     }
    },
    "outputs": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it over $[0, \\infty)$ using a Becke Transformation."
+    "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation."
    ],
    "metadata": {
     "collapsed": false
@@ -105,8 +105,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:22:56.036447565Z",
-     "start_time": "2023-05-17T14:22:55.137210706Z"
+     "end_time": "2023-05-18T16:48:01.272238929Z",
+     "start_time": "2023-05-18T16:48:00.739624430Z"
     }
    }
   },
@@ -148,8 +148,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:22:56.433174976Z",
-     "start_time": "2023-05-17T14:22:56.036922332Z"
+     "end_time": "2023-05-18T16:48:02.836108707Z",
+     "start_time": "2023-05-18T16:48:02.704710630Z"
     }
    }
   },
@@ -195,8 +195,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:22:57.708780771Z",
-     "start_time": "2023-05-17T14:22:56.313734781Z"
+     "end_time": "2023-05-18T16:48:05.389647782Z",
+     "start_time": "2023-05-18T16:48:04.376467773Z"
     }
    }
   },
@@ -221,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max Error 0.0011565949680750198,  Mean Error 4.3415694391537126e-05,  Std Dev 0.00016244873096903962\n"
+      "Max Error 0.001302904658059434,  Mean Error 3.500902876292755e-05,  Std Dev 0.0001483415813999016\n"
      ]
     }
    ],
@@ -245,8 +245,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:22:59.450792806Z",
-     "start_time": "2023-05-17T14:22:57.692521877Z"
+     "end_time": "2023-05-18T16:48:06.926137896Z",
+     "start_time": "2023-05-18T16:48:06.253765458Z"
     }
    }
   },
@@ -274,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max Error 0.003357862588522449,  Mean Error 0.00013976955187270786,  Std Dev 0.000501979407892422\n"
+      "Max Error 0.0015169498269268777,  Mean Error 7.528647116405785e-05,  Std Dev 0.00023846069080800918\n"
      ]
     }
    ],
@@ -299,8 +299,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:23:01.183957233Z",
-     "start_time": "2023-05-17T14:22:59.451356638Z"
+     "end_time": "2023-05-18T16:48:09.998527980Z",
+     "start_time": "2023-05-18T16:48:08.697737663Z"
     }
    }
   },
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max Error 0.016678845976890955,  Mean Error 0.003914609516999717,  Std Dev 0.003430284516144893\n"
+      "Max Error 0.015115750096519776,  Mean Error 0.0038874435708785506,  Std Dev 0.0032290409703695498\n"
      ]
     }
    ],
@@ -367,8 +367,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T14:24:11.603925355Z",
-     "start_time": "2023-05-17T14:23:06.070696444Z"
+     "end_time": "2023-05-18T16:48:35.841955440Z",
+     "start_time": "2023-05-18T16:48:12.316718019Z"
     }
    }
   }
