--- a/doc/notebooks/Molecular_Grid_Construction.ipynb
+++ b/doc/notebooks/Molecular_Grid_Construction.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "source": [
     "# Constructing Molecular Grids\n",
+    "Molecular grids are particularly useful in quantum chemistry for integrating functions that concentrate and are \"spike\" around finite set of points, usually the atomic nuclei. This is particularly needed for DFT computation or atom-in-molecule analysis.\n",
     "\n",
     "### Molecular Grid Details\n",
-    "Molecular grids are particularly useful in quantum chemistry for integrating functions that concentrate and are \"spike\" around finite set of points, usually the atomic nuclei. This is particularly needed for DFT computation or atom-in-molecule analysis. It starts by first decomposing a function into atomic contributions and\n",
+    "It starts by first decomposing a function into atomic contributions and\n",
     "writing out each atomic integral in spherical coordinates. As proposed by [Becke](../index.rst#becke1988_multicenter), this is done as\n",
     "\n",
     "$$\n",
