--- a/docs/notebooks/Cubic_Grids.ipynb
+++ b/docs/notebooks/Cubic_Grids.ipynb
@@ -16,7 +16,7 @@
     "See their API documentation for more information about the classes.\n",
     "\n",
     "##### Tensor 1D Grids\n",
-    "The first grid is a tensor combination of three grids with points $\\{p^1_i\\}, \\{p^2_i\\}, \\{p^3_i\\}$ and weights $\\{w^1_i\\}, \\{w^2_i\\}, \\{w^3_i\\}$ such that the new set of points are $\\{(p^1_i, p^2_j, p^3_k)\\}$ with weights $\\{(w^1_i, w^2_j, w^3_k)\\}$."
+    "The first grid is a tensor combination of three grids with points $\\{p^1_i\\}, \\{p^2_i\\}, \\{p^3_i\\}$ and weights $\\{w^1_i\\}, \\{w^2_i\\}, \\{w^3_i\\}$ such that the new set of points are $\\{(p^1_i, p^2_j, p^3_k)\\}$ with weights $\\{w^1_i \\times w^2_j \\times w^3_k\\}$."
    ]
   },
   {
@@ -47,6 +47,15 @@
     "npoints = 10\n",
     "onedgridz = UniformInteger(npoints)\n",
     "onedgridz = LinearInfiniteRTransform(-1, 1).transform_1d_grid(onedgridz)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "Each of the individual grids axes are plotted."
    ]
   },
   {
@@ -81,6 +90,15 @@
     "ax.set_zlabel(\"Z-axis\")\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "The Tensor1DGrids can now be easily constructed by passing in each of the three one-dimensional grids.  These are then plotted"
    ]
   },
   {
