--- a/docs/notebooks/Multipole_Moments.ipynb
+++ b/docs/notebooks/Multipole_Moments.ipynb
@@ -6,8 +6,9 @@
     "collapsed": false
    },
    "source": [
-    "#### Multipole Moments\n",
+    "## Multipole Moments\n",
     "\n",
+    "Every grid class has the ability to compute the multipole moment integral of a function over cente\n",
     "Grid can compute various multipole moments of different types:\n",
     "$$\n",
     "\\begin{align*}\n",
@@ -19,26 +20,147 @@
     "$$\n",
     "for some function $f : \\mathbb{R}^3\\rightarrow \\mathbb{R}$, where $S_l^m$ is the regular, real solid harmonics, $(n_x, n_y, n_z)$ are the Cartesian orders over some center $(X_c, Y_c, Z_c)$ and $(l, m)$ are the angular order and degree.\n",
     "\n",
-<<<<<<< HEAD
-    "The moment function in grid can compute all multipole moments leading up to a specified order. In addition, it can take various centers to compute over.\n",
     "\n",
-    "\n",
-    "Suppose we have a electron density of a molecular $\\rho(\\textbf{r}})$.  The electric dipole moment $\\textbf{p}$ is defined to be a vector corresponding to Cartesian moment whose orders $(n_x, n_y, n_z)$ sum  up to one, i.e. $\\textbf{p} = (m_{1, 0, 0}, m_{0, 1, 0}, m_{0, 0, 1})$.  The magnitude of this is the dipole moment $\\mu$ of the electron density\n",
-    "\n",
-    "$$\\mu = \\big| \\big|\\textbf{p} \\big| \\big| = \\sqrt{m_{1, 0, 0}^2 +  m_{0, 1, 0}^2 + m_{0, 0, 1}^2}.$$"
-=======
-    "The moment function in grid can compute all multipole moments leading up to a specified order. In addition, it can take various centers to compute over."
->>>>>>> 32d8e9f8cd2fea5028d677bd401d7ca7dbc35a4d
+    "This example illustrates how to compute the dipole moment of Formaldehyde.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "IOData is used to first read the wavefunction information of Formaldehyde."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-17T18:37:54.313563780Z",
+     "start_time": "2023-05-17T18:37:54.270541396Z"
+    },
     "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dipole Moments  {(1, 'c'): array([-9.39793529e-01,  2.44832724e-08, -2.02253053e-07])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from iodata import load_one\n",
+    "\n",
+    "mol = load_one(\"./ch2o_q+0.fchk\")\n",
+    "\n",
+    "print(\"Dipole Moments \", mol.moments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "In order to compute the moment integral, a molecular grid class is constructed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-17T18:37:55.941572260Z",
+     "start_time": "2023-05-17T18:37:55.844346509Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
+   "source": [
+    "from grid.becke import BeckeWeights\n",
+    "from grid.molgrid import MolGrid\n",
+    "from grid.onedgrid import GaussLegendre\n",
+    "from grid.rtransform import BeckeRTransform\n",
+    "\n",
+    "# Construct a radial grid\n",
+    "oned_grid = GaussLegendre(npoints=50)\n",
+    "radial_grid = BeckeRTransform(0.0, R=1.5).transform_1d_grid(oned_grid)  #BeckeRTransform(0.0, R=2.0).transform_1d_grid(oned_grid)\n",
+    "\n",
+    "# Construct Molecular grid with angular degree of 50 for each atom.\n",
+    "mol_grid = MolGrid.from_size(\n",
+    "    atnums=mol.atnums,          # The atomic numbers of Formaldehyde\n",
+    "    atcoords=mol.atcoords,      # The atomic coordinates of Formaldehyde\n",
+    "    rgrid=radial_grid,          # Radial grid used to construct atomic grids over each carbon, and hydrogen.\n",
+    "    size=50,                    # The angular degree of the atomic grid over each carbon, and hydrogen.\n",
+    "    aim_weights=BeckeWeights(), # Atom-in molecular weights: Becke weights\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "The moment integrals can be calculated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-17T18:42:45.066584136Z",
+     "start_time": "2023-05-17T18:42:44.418868819Z"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.00395472]\n",
+      "[ 1.60950630e+01  3.45000845e-06 -1.31242995e-06]\n",
+      "[ 1.60911083e+01 -3.95126670e-03 -3.95602914e-03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from gbasis.wrappers import from_iodata\n",
+    "from gbasis.evals.density import evaluate_density\n",
+    "\n",
+    "# Construct molecular basis from wave-function information read by IOData\n",
+    "basis, type = from_iodata(mol)\n",
+    "\n",
+    "# Compute the electron density\n",
+    "rdm = mol.one_rdms[\"scf\"]\n",
+    "electron_density = evaluate_density(rdm, basis, mol_grid.points, coord_type=type)\n",
+    "\n",
+    "\n",
+    "center_atom = np.array([np.sum(mol.atcoords, axis=0) / len(mol.atcoords)])\n",
+    "a = mol_grid.moments(\n",
+    "    3, np.array([[0.0, 0.0, 0.0]]), electron_density, type_mom=\"cartesian\", return_orders=True\n",
+    ")\n",
+    "print(a[0][-6])\n",
+    "print(np.sum(mol.atnums[:, np.newaxis] * mol.atcoords, axis=0))\n",
+    "print(a[0][-6] + np.sum(mol.atnums[:, np.newaxis] * mol.atcoords, axis=0))\n",
+    "# (2, 'c'): array([ 1.24344979e-14, -4.79884555e-15,  4.53864177e-15, -1.77635684e-15, 3.25806694e-15, -5.32907052e-15])}\n",
+    "# Dipole Moments  {(1, 'c'): array([-9.39793529e-01,  2.44832724e-08, -2.02253053e-07])}"
+   ]
   }
  ],
  "metadata": {
