--- a/docs/_sources/notebooks/Cubic_Grids.ipynb
+++ b/docs/_sources/notebooks/Cubic_Grids.ipynb
@@ -13,7 +13,7 @@
     "See their API documentation for more information about the classes.\n",
     "\n",
     "##### Tensor 1D Grids\n",
-    "The first grid is a tensor combination of three grids with points $\\{p^1_i\\}, \\{p^2_i\\}, \\{p^3_i\\}$ and weights $\\{w^1_i\\}, \\{w^2_i\\}, \\{w^3_i\\}$ such that the new set of points are $\\{(p^1_i, p^2_j, p^3_k)\\}$ with weights $\\{(w^1_i, w^2_j, w^3_k)\\}$."
+    "The first grid is a tensor combination of three grids with points $\\{p^1_i\\}, \\{p^2_i\\}, \\{p^3_i\\}$ and weights $\\{w^1_i\\}, \\{w^2_i\\}, \\{w^3_i\\}$ such that the new set of points are $\\{(p^1_i, p^2_j, p^3_k)\\}$ with weights $\\{w^1_i \\times w^2_j \\times w^3_k\\}$."
    ],
    "metadata": {
     "collapsed": false
@@ -50,6 +50,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Each of the individual grids axes are plotted."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "outputs": [
@@ -76,6 +85,15 @@
     "ax.set_zlabel(\"Z-axis\")\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The Tensor1DGrids can now be easily constructed by passing in each of the three one-dimensional grids.  These are then plotted"
    ],
    "metadata": {
     "collapsed": false
