Add more jupyter notebooks

--- a/doc/notebooks/Multipole_Moments.ipynb
+++ b/doc/notebooks/Multipole_Moments.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Multipole Moments\n",
+    "## Multipole Moments (In Progress)\n",
     "\n",
     "Every grid class has the ability to compute the multipole moment integral of a function over cente\n",
     "Grid can compute various multipole moments of different types:\n",
