--- a/docs/notebooks/Multipole_Moments.ipynb
+++ b/docs/notebooks/Multipole_Moments.ipynb
@@ -6,7 +6,7 @@
     "collapsed": false
    },
    "source": [
-    "## Multipole Moments\n",
+    "## Multipole Moments (In Progress)\n",
     "\n",
     "Every grid class has the ability to compute the multipole moment integral of a function over cente\n",
     "Grid can compute various multipole moments of different types:\n",
