--- a/doc/notebooks/Multipole_Moments.ipynb
+++ b/doc/notebooks/Multipole_Moments.ipynb
@@ -5,14 +5,14 @@
    "source": [
     "## Multipole Moments (In Progress)\n",
     "\n",
-    "Every grid class has the ability to compute the multipole moment integral of a function over cente\n",
+    "Every grid class has the ability to compute the multipole moment integral of a function over various centers.\n",
     "Grid can compute various multipole moments of different types:\n",
     "$$\n",
     "\\begin{align*}\n",
     "    m_{n_x, n_y, n_z} &= \\int (x - X_c)^{n_x} (y - Y_c)^{n_y} (z - Z_c)^{n_z} f(r) dr \\qquad \\qquad &\\text{Cartesian moments}\\\\\n",
-    "    m_{lm} &= \\int | \\textbf{r} - \\textbf{R}_c|^l S_{l}^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{spherical moments} \\\\\n",
-    "    m_n &= \\int | \\textbf{r} - \\textbf{R}_c|^{n} f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{radial moments}\\\\\n",
-    "    m_{nlm} &= \\int | \\textbf{r} - \\textbf{R}_c|^{n+1} S_l^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{radial with spherical moments}\n",
+    "    m_{lm} &= \\int | \\textbf{r} - \\textbf{R}_c|^l S_{l}^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Spherical moments} \\\\\n",
+    "    m_n &= \\int | \\textbf{r} - \\textbf{R}_c|^{n} f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Radial moments}\\\\\n",
+    "    m_{nlm} &= \\int | \\textbf{r} - \\textbf{R}_c|^{n+1} S_l^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Radial with spherical moments}\n",
     "\\end{align*}\n",
     "$$\n",
     "for some function $f : \\mathbb{R}^3\\rightarrow \\mathbb{R}$, where $S_l^m$ is the regular, real solid harmonics, $(n_x, n_y, n_z)$ are the Cartesian orders over some center $(X_c, Y_c, Z_c)$ and $(l, m)$ are the angular order and degree.\n",
