--- a/docs/_sources/notebooks/Multipole_Moments.ipynb
+++ b/docs/_sources/notebooks/Multipole_Moments.ipynb
@@ -3,22 +3,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Multipole Moments (In Progress)\n",
+    "## Multipole Moments\n",
     "\n",
-    "Every grid class has the ability to compute the multipole moment integral of a function over cente\n",
-    "Grid can compute various multipole moments of different types:\n",
+    "Every grid class has the ability to compute the multipole moment integral of a function over various centers.\n",
+    "It can compute the following types:\n",
     "$$\n",
     "\\begin{align*}\n",
     "    m_{n_x, n_y, n_z} &= \\int (x - X_c)^{n_x} (y - Y_c)^{n_y} (z - Z_c)^{n_z} f(r) dr \\qquad \\qquad &\\text{Cartesian moments}\\\\\n",
-    "    m_{lm} &= \\int | \\textbf{r} - \\textbf{R}_c|^l S_{l}^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{spherical moments} \\\\\n",
-    "    m_n &= \\int | \\textbf{r} - \\textbf{R}_c|^{n} f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{radial moments}\\\\\n",
-    "    m_{nlm} &= \\int | \\textbf{r} - \\textbf{R}_c|^{n+1} S_l^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{radial with spherical moments}\n",
+    "    m_{lm} &= \\int | \\textbf{r} - \\textbf{R}_c|^l S_{l}^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Spherical moments} \\\\\n",
+    "    m_n &= \\int | \\textbf{r} - \\textbf{R}_c|^{n} f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Radial moments}\\\\\n",
+    "    m_{nlm} &= \\int | \\textbf{r} - \\textbf{R}_c|^{n+1} S_l^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Radial with spherical moments}\n",
     "\\end{align*}\n",
     "$$\n",
     "for some function $f : \\mathbb{R}^3\\rightarrow \\mathbb{R}$, where $S_l^m$ is the regular, real solid harmonics, $(n_x, n_y, n_z)$ are the Cartesian orders over some center $(X_c, Y_c, Z_c)$ and $(l, m)$ are the angular order and degree.\n",
     "\n",
     "\n",
-    "This example illustrates how to compute the dipole moment of Formaldehyde.\n",
+    "This example illustrates how to compute the dipole moment of water.   This is defined as the observable form a wavefunction $\\Psi$: $\\vec{\\mu} = \\int \\Psi \\hat{\\mu} \\Psi \\vec{r}$ which results in\n",
+    "\n",
+    "$$\n",
+    "    \\vec{\\mu} = \\sum_{i=1}^{N_{atoms}} Z_i (\\vec{R_i} - \\vec{R_c}) -\n",
+    "    \\int (\\vec{r} - \\vec{R_c}) \\rho(\\vec{r}) dr,\n",
+    "$$\n",
+    "\n",
+    "where $N_{atoms}$ is the number of atoms, $Z_i$ is the atomic charge of the ith atom, $\\vec{R_i}$ is the ith coordinate of the atom, $\\vec{R_c}$ is the center of the molecule and $\\rho$ is the electron density of the molecule.\n",
     "\n"
    ],
    "metadata": {
@@ -36,12 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-17T18:37:54.313563780Z",
-     "start_time": "2023-05-17T18:37:54.270541396Z"
+     "end_time": "2023-06-02T15:39:02.285302057Z",
+     "start_time": "2023-06-02T15:39:02.030837141Z"
     }
    },
    "outputs": [
@@ -49,14 +56,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dipole Moments  {(1, 'c'): array([-9.39793529e-01,  2.44832724e-08, -2.02253053e-07])}\n"
+      "Dipole Moments  {(1, 'c'): array([0.16176897, 0.58865022, 0.39905597])}\n"
      ]
     }
    ],
    "source": [
     "from iodata import load_one\n",
     "\n",
-    "mol = load_one(\"./ch2o_q+0.fchk\")\n",
+    "mol = load_one(\"./h2o.fchk\")\n",
     "\n",
     "print(\"Dipole Moments \", mol.moments)"
    ]
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from grid.becke import BeckeWeights\n",
@@ -81,7 +88,7 @@
     "from grid.rtransform import BeckeRTransform\n",
     "\n",
     "# Construct a radial grid\n",
-    "oned_grid = GaussLegendre(npoints=50)\n",
+    "oned_grid = GaussLegendre(npoints=150)\n",
     "radial_grid = BeckeRTransform(0.0, R=1.5).transform_1d_grid(oned_grid)  #BeckeRTransform(0.0, R=2.0).transform_1d_grid(oned_grid)\n",
     "\n",
     "# Construct Molecular grid with angular degree of 50 for each atom.\n",
@@ -89,15 +96,15 @@
     "    atnums=mol.atnums,          # The atomic numbers of Formaldehyde\n",
     "    atcoords=mol.atcoords,      # The atomic coordinates of Formaldehyde\n",
     "    rgrid=radial_grid,          # Radial grid used to construct atomic grids over each carbon, and hydrogen.\n",
-    "    size=50,                    # The angular degree of the atomic grid over each carbon, and hydrogen.\n",
-    "    aim_weights=BeckeWeights(), # Atom-in molecular weights: Becke weights\n",
+    "    size=130,                    # The angular degree of the atomic grid over each carbon, and hydrogen.\n",
+    "    aim_weights=BeckeWeights(), # Atom-in molecular weights: Becke weights,\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T18:37:55.941572260Z",
-     "start_time": "2023-05-17T18:37:55.844346509Z"
+     "end_time": "2023-06-02T15:39:05.165281651Z",
+     "start_time": "2023-06-02T15:39:04.496564824Z"
     }
    }
   },
@@ -119,15 +126,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.00395472]\n",
-      "[ 1.60950630e+01  3.45000845e-06 -1.31242995e-06]\n",
-      "[ 1.60911083e+01 -3.95126670e-03 -3.95602914e-03]\n"
+      "Dipole moment calculated [0.1617419  0.58865474 0.39904899]\n",
+      "Dipole moment true [0.16176897 0.58865022 0.39905597]\n",
+      "Mean error 1.285537519197614e-05 with maximum error 2.7064523889591685e-05\n"
      ]
     }
    ],
@@ -136,29 +143,29 @@
     "from gbasis.wrappers import from_iodata\n",
     "from gbasis.evals.density import evaluate_density\n",
     "\n",
+    "from grid.utils import dipole_moment_of_molecule\n",
+    "\n",
     "# Construct molecular basis from wave-function information read by IOData\n",
     "basis, type = from_iodata(mol)\n",
     "\n",
     "# Compute the electron density\n",
     "rdm = mol.one_rdms[\"scf\"]\n",
     "electron_density = evaluate_density(rdm, basis, mol_grid.points, coord_type=type)\n",
+    "# electron_density[np.all(mol_grid.points < 1e-10, axis=1)] += 36.0\n",
     "\n",
+    "true = dipole_moment_of_molecule(mol_grid, electron_density, mol.atcoords, mol.atnums)\n",
+    "desired = mol.moments[(1, \"c\")]\n",
+    "print(f\"Dipole moment calculated {true}\")\n",
+    "print(f\"Dipole moment true {desired}\")\n",
     "\n",
-    "center_atom = np.array([np.sum(mol.atcoords, axis=0) / len(mol.atcoords)])\n",
-    "a = mol_grid.moments(\n",
-    "    3, np.array([[0.0, 0.0, 0.0]]), electron_density, type_mom=\"cartesian\", return_orders=True\n",
-    ")\n",
-    "print(a[0][-6])\n",
-    "print(np.sum(mol.atnums[:, np.newaxis] * mol.atcoords, axis=0))\n",
-    "print(a[0][-6] + np.sum(mol.atnums[:, np.newaxis] * mol.atcoords, axis=0))\n",
-    "# (2, 'c'): array([ 1.24344979e-14, -4.79884555e-15,  4.53864177e-15, -1.77635684e-15, 3.25806694e-15, -5.32907052e-15])}\n",
-    "# Dipole Moments  {(1, 'c'): array([-9.39793529e-01,  2.44832724e-08, -2.02253053e-07])}"
+    "err = np.abs(true - desired)\n",
+    "print(f\"Mean error {np.mean(err)} with maximum error {np.max(err)}\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-17T18:42:45.066584136Z",
-     "start_time": "2023-05-17T18:42:44.418868819Z"
+     "end_time": "2023-06-02T15:39:07.108123481Z",
+     "start_time": "2023-06-02T15:39:06.152410628Z"
     }
    }
   }
