Update dipole moment notebook

--- a/doc/notebooks/Multipole_Moments.ipynb
+++ b/doc/notebooks/Multipole_Moments.ipynb
@@ -15,10 +15,10 @@
     "    m_{nlm} &= \\int | \\textbf{r} - \\textbf{R}_c|^{n+1} S_l^m(\\theta, \\phi) f(\\textbf{r}) d\\textbf{r} \\qquad \\qquad &\\text{Radial with spherical moments}\n",
     "\\end{align*}\n",
     "$$\n",
-    "for some function $f : \\mathbb{R}^3\\rightarrow \\mathbb{R}$, where $S_l^m$ is the regular, real solid harmonics, $(n_x, n_y, n_z)$ are the Cartesian orders over some center $(X_c, Y_c, Z_c)$ and $(l, m)$ are the angular order and degree.\n",
+    "for some function $f : \\mathbb{R}^3\\rightarrow \\mathbb{R}$, where $S_l^m$ is the regular, real solid harmonics, $(n_x, n_y, n_z)$ are the Cartesian orders over some center $\\textbf{R}_c = (X_c, Y_c, Z_c)$ and $(l, m)$ are the angular order and degree.\n",
     "\n",
     "\n",
-    "This example illustrates how to compute the dipole moment of water.   This is defined as the observable form a wavefunction $\\Psi$: $\\vec{\\mu} = \\int \\Psi \\hat{\\mu} \\Psi \\vec{r}$ which results in\n",
+    "This example illustrates how to compute the dipole moment of water.   This is defined as the observable acting on a wavefunction $\\Psi$: $\\vec{\\mu} = \\int \\Psi \\hat{\\mu} \\Psi \\vec{r}$ which results in the calculation of the dipole moment as\n",
     "\n",
     "$$\n",
     "    \\vec{\\mu} = \\sum_{i=1}^{N_{atoms}} Z_i (\\vec{R_i} - \\vec{R_c}) -\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "The moment integrals can be calculated."
+    "The dipole moment can then be calculated."
    ],
    "metadata": {
     "collapsed": false
