Update sin(theta) to sin(phi) in notebooks

--- a/doc/notebooks/Interpolation_and_Poisson.ipynb
+++ b/doc/notebooks/Interpolation_and_Poisson.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "where the unknown $w_{lm}$ is a function of the radial component and is found as follows. For a fixed $r$, the radial component $w_{lm}$ is computed as the integral\n",
     "$$\n",
-    "w_{lm}(r) = \\int \\int f(r, \\theta, \\phi) Y_{lm}(\\theta, \\phi) \\sin(\\theta) d\\theta d\\phi\n",
+    "w_{lm}(r) = \\int \\int f(r, \\theta, \\phi) Y_{lm}(\\theta, \\phi) \\sin(\\phi) d\\theta d\\phi\n",
     "$$\n",
     "over various values of $r$ and then interpolated $\\tilde{w}_{lm}$ using a cubic spline. This integral can be done using the [angular grid](../pyapi/grid.angular.rst) module. The interpolation of $f$ is simply then\n",
     "$$\n",
@@ -180,7 +180,7 @@
     "\n",
     "\n",
     "err = np.abs(actual_potential(atgrid.points) - potential_values)\n",
-    "print(np.max(err), np.mean(err), np.std(err))"
+    "print(np.max(err), np.mean(err), np.std(err))\n"
    ],
    "metadata": {
     "collapsed": false,
