--- a/doc/notebooks/Molecular_Grid_Construction.ipynb
+++ b/doc/notebooks/Molecular_Grid_Construction.ipynb
@@ -19,13 +19,13 @@
     "\n",
     "$$\n",
     "    \\int_{\\mathbb{R}^3} w_A(\\vec{\\textbf{r}}) f(\\vec{\\textbf{r}}) d\\vec{\\textbf{r}} =\n",
-    "    \\int \\int \\int  w_A(r, \\theta, \\phi) f(r, \\theta, \\phi) r^2 \\sin(\\theta) dr d\\theta d\\phi\n",
+    "    \\int \\int \\int  w_A(r, \\theta, \\phi) f(r, \\theta, \\phi) r^2 \\sin(\\phi) dr d\\theta d\\phi\n",
     "$$\n",
     "\n",
     "Then a one-dimensional grid is chosen over the radial grid (see [radial](../pyapi/grid.onedgrid.rst) and [radial transform](../pyapi/grid.rtransform.rst) module) with weights $w_i^{rad}$ and an angular grid with weights $w_j^{ang}$ is  chosen to integrate over the angles $(\\theta, \\phi)$ including the sin factor. The combination of the two is handled by the [atomic grid](../pyapi/grid.atomgrid.rst) module with weights $w_{ij} = w_i^{rad} w_j^{ang} r^2$ to achieve the numerical integral\n",
     "\n",
     "$$\n",
-    "    \\int \\int \\int  w_A(r, \\theta, \\phi) f(r, \\theta, \\phi) r^2 \\sin(\\theta) dr d\\theta d\\phi \\approx\n",
+    "    \\int \\int \\int  w_A(r, \\theta, \\phi) f(r, \\theta, \\phi) r^2 \\sin(\\phi) dr d\\theta d\\phi \\approx\n",
     "    \\sum_{i=1}^{N_{rad}} \\sum_{j=1}^{N_{ang}} w_{ij}(r, \\theta, \\phi)\n",
     "    w_A(r, \\theta, \\phi) f(r, \\theta, \\phi).\n",
     "$$\n",
@@ -291,7 +291,7 @@
     "\n",
     "density = mol.compute_density(molgrid.points)\n",
     "integral = molgrid.integrate(density)\n",
-    "print(f\"The integral of electron density of Formaldehyde is {integral}.\")"
+    "print(f\"The integral of electron density of Formaldehyde is {integral}.\")\n"
    ],
    "metadata": {
     "collapsed": false
