Dipole Moment Center of Mass Fix #188 (#190)
* Add isotopic masses #188

- Center of mass was incorrectly calculated

* Fix center of masses in dipole moment

* Update multipole moments notebook

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Update docs in dipole moment

* Update code doc to include center of mass

* Fix linter issues

* Remove unused import

---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/doc/notebooks/Multipole_Moments.ipynb
+++ b/doc/notebooks/Multipole_Moments.ipynb
@@ -47,8 +47,8 @@
       "metadata": {
         "collapsed": true,
         "ExecuteTime": {
-          "end_time": "2023-06-02T15:39:02.285302057Z",
-          "start_time": "2023-06-02T15:39:02.030837141Z"
+          "end_time": "2023-09-14T12:59:58.699949849Z",
+          "start_time": "2023-09-14T12:59:58.259967468Z"
         }
       },
       "outputs": [
@@ -56,14 +56,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dipole Moments  {(1, 'c'): array([0.16176897, 0.58865022, 0.39905597])}\n"
+            "Dipole Moments  {(1, 'c'): array([-9.39793529e-01,  2.44832724e-08, -2.02253053e-07])}\n"
           ]
         }
       ],
       "source": [
         "from iodata import load_one\n",
         "\n",
-        "mol = load_one(\"./h2o.fchk\")\n",
+        "mol = load_one(\"./ch2o_q+0.fchk\")\n",
         "\n",
         "print(\"Dipole Moments \", mol.moments)"
       ]
@@ -103,8 +103,8 @@
       "metadata": {
         "collapsed": false,
         "ExecuteTime": {
-          "end_time": "2023-06-02T15:39:05.165281651Z",
-          "start_time": "2023-06-02T15:39:04.496564824Z"
+          "end_time": "2023-09-14T12:59:59.588157665Z",
+          "start_time": "2023-09-14T12:59:58.695871034Z"
         }
       }
     },
@@ -132,9 +132,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dipole moment calculated [0.1617419  0.58865474 0.39904899]\n",
-            "Dipole moment true [0.16176897 0.58865022 0.39905597]\n",
-            "Mean error 1.285537519197614e-05 with maximum error 2.7064523889591685e-05\n"
+            "Dipole moment calculated [-9.39751887e-01  6.42314269e-05  4.02806905e-05]\n",
+            "Dipole moment true [-9.39793529e-01  2.44832724e-08 -2.02253053e-07]\n",
+            "Mean error 4.8777153211832257e-05 with maximum error 6.42069436543974e-05\n"
           ]
         }
       ],
@@ -151,7 +151,6 @@
         "# Compute the electron density\n",
         "rdm = mol.one_rdms[\"scf\"]\n",
         "electron_density = evaluate_density(rdm, basis, mol_grid.points, coord_type=type)\n",
-        "# electron_density[np.all(mol_grid.points < 1e-10, axis=1)] += 36.0\n",
         "\n",
         "true = dipole_moment_of_molecule(mol_grid, electron_density, mol.atcoords, mol.atnums)\n",
         "desired = mol.moments[(1, \"c\")]\n",
@@ -164,8 +163,8 @@
       "metadata": {
         "collapsed": false,
         "ExecuteTime": {
-          "end_time": "2023-06-02T15:39:07.108123481Z",
-          "start_time": "2023-06-02T15:39:06.152410628Z"
+          "end_time": "2023-09-14T13:00:04.004344173Z",
+          "start_time": "2023-09-14T12:59:59.920792692Z"
         }
       }
     }
